--- a/museum-frontend/src/app/feature-modules/exhibitions/exhibitions-view/exhibitions-view.component.css
+++ b/museum-frontend/src/app/feature-modules/exhibitions/exhibitions-view/exhibitions-view.component.css
@@ -1,8 +1,9 @@
 .overlay {
-  position: relative;
-  height: 100%;
-  padding: 0px 0px 50px 0px; 
-  
+    position: relative;
+    min-height: calc(100vh - 50px); /* Adjust height minus footer height */
+    padding: 0px 0px 0px 0px; 
+    box-sizing: border-box; /* Ensure padding is included in the height */
+    z-index: 1;
 }
 
 .exhibition-menu {
@@ -40,37 +41,34 @@
   }
 
   .card-container {
-    background-color: #f5f5f5; /* or another light color */
+    background-color: #f5f5f5;
     padding: 30px;
-    position: relative;
-    z-index: 2; /* Make sure cards are above the overlay */
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; /* Center the cards */
-    gap: 20px;
-    max-width: 1250px; /* Limit the width of the container */
-    margin: 0 auto; /* Center the container on the page */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Uvek 3 kolone */
+    gap: 55px;
+    max-width: 1250px;
+    margin: 0 auto;
   }
-
-.card {
-  width: 30%; /* Take up 30% of the container's width */
-  background-color: #fff; /* Background color for the card */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add some shadow for depth */
-  border-radius: 8px; /* Rounded corners */
-  overflow: hidden; /* Hide anything that overflows the card */
-}
-
-.card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
+  
+  .card {
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  }
+  
   
 .row {
-  width: 100%;
   display: flex;
-  justify-content: space-between; /* Evenly distribute the cards */
-  margin-bottom: 30px; /* Space between rows */
+  flex-wrap: wrap; /* Let the cards wrap within this row */
+  justify-content: space-between;
+  margin-bottom: 30px;
 }
 
 .title {
