--- a/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.css
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: row;
     padding: 20px;
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
-    overflow: hidden; /* Ovo je važno kako bi se osiguralo da pseudoelement ne izlazi van parenta */
+    overflow-y: auto; /* Ovo je važno kako bi se osiguralo da pseudoelement ne izlazi van parenta */
 }
 
 .profile-wrapper::before {
@@ -34,8 +34,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
-    max-height: 58%;
+    height: 50vh;
 }
 
 .profile-info {
@@ -118,6 +117,15 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    overflow-y: hidden;
+}
+
+.exhibitions-container,
+.proposals-container {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .exhibitions-container h2,
@@ -126,8 +134,8 @@
     color: #1D1D1D;
     padding: 5px 15px; /* Smanjen padding za naslov */
     border-radius: 5px;
-    margin-bottom: 0px; /* Smanjen margin ispod naslova */
-    margin-top: opx; /* Smanjen margin iznad naslova */
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 
@@ -135,11 +143,12 @@
 .proposals-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 10px; /* Smanjen razmak između kartica */
-    padding: 5px; /* Smanjen padding unutar grid containera */
+    grid-template-rows: 1fr;
+    gap: 10px;
+    padding: 5px;
     justify-items: center;
-    margin-bottom: 0px; /* Smanjen margin ispod kartica */
-    margin-top: 0px; /* Smanjen margin iznad kartica */
+    max-height: 360px;
+    overflow-y: auto;
 }
 
 .exhibition-section,
@@ -159,10 +168,11 @@
     justify-content: center;
     font-size: 1.1rem;
     color: #333;
-    height: 300px;
+    height: 100%;
     padding: 20px;
     text-align: center;
-    min-height: 100px;
+    min-height: 150px;
+    flex-shrink: 0;
 }
 
 
@@ -179,11 +189,7 @@
     justify-content: space-between;
 }
 
-.item-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
+
 
 .image-container {
     width: 100%;
@@ -262,6 +268,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-y: auto;
 }
 
 .proposal-name {
