--- a/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.html
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.html
@@ -26,12 +26,13 @@
             <div class="info-row">
               <p class="item-name">{{exhibition.name}}</p>
             </div>
-            <div class="info-row">
+            <div class="info-row exhibition-dates-row">
               <p class="exhibition-dates">{{exhibition.proposal.startDate}} - {{exhibition.proposal.endDate}}</p>
-            </div>
-            <div class="info-row">
+              <mat-icon (click)="editExhibition(exhibition.id)" class="edit-icon">edit</mat-icon> <!-- Ikonica za edit desno od datuma -->
+          </div>
+            <div class="info-row icons">
               <button class="find-out-more-button" (click)="navigateToDetails(exhibition.id)">Find Out More</button>
-            </div>
+          </div>
           </div>
         </div>
       </div>
