--- a/museum-frontend/src/app/feature-modules/exhibitions/proposal-details/proposal-details.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/proposal-details/proposal-details.component.html
@@ -1,8 +1,8 @@
 <div class="proposal-details">
     <h3>Proposal #{{ data.proposal.id }}</h3>
-    <p>{{ data.proposal.startDate }} - {{ data.proposal.endDate }}</p>
-    <p>Room {{ data.proposal.roomReservation.room.name }} {{ data.proposal.roomReservation.room.number }}</p>
-    <p>Adult: {{ data.proposal.priceList.adultPrice | currency }} | Minor: {{ data.proposal.priceList.minorPrice | currency }}</p>
-    <p>Proposed by {{ data.proposal.organizer.firstName }} {{ data.proposal.organizer.lastName }}</p>
+    <p class="dates">{{ data.proposal.startDate }} - {{ data.proposal.endDate }}</p>
+    <p class="room">Room {{ data.proposal.roomReservation.room.name }} {{ data.proposal.roomReservation.room.number }}</p>
+    <p class="prices">Adult: {{ data.proposal.priceList.adultPrice | currency }} | Minor: {{ data.proposal.priceList.minorPrice | currency }}</p>
+    <p class="organizer">Proposed by {{ data.proposal.organizer.firstName }} {{ data.proposal.organizer.lastName }}</p>
 </div>
-  
+
