--- a/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.css
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.css
@@ -35,6 +35,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 50vh; /* Return to old height style */
+    position: relative;
 }
 
 
@@ -206,6 +207,7 @@
     width: 100%;
     height: 200px; /* Povećaj visinu slike */
     overflow: hidden;
+    position: relative;
 }
 
 .image-container img {
@@ -355,15 +357,43 @@
 }
 
 .edit-icon {
+    height: 24px;
+    width: 24px;
     cursor: pointer;
-    color: #333;
-    transition: color 0.3s ease;
-    font-size: 20px; /* Podesite veličinu ikone prema želji */
+    position: absolute; /* Apsolutno pozicioniranje */
+    top: 10px; /* Udaljenost od vrha */
+    right: 10px; /* Udaljenost od desnog ivica */
 }
 
 .edit-icon:hover {
     color: #d4a017; /* Promena boje prilikom prelaska mišem */
 }
+
+.status-label {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 0.9em;
+    color: white;
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.5); /* Polutransparentna pozadina */
+    z-index: 1; /* Postavite viši z-index kako bi se osiguralo da je labela iznad slike */
+}
+
+.future-status {
+    background-color: #d4a017; /* Zlatna za FUTURE */
+}
+
+.current-status {
+    background-color: #28a745; /* Zelena za CURRENT */
+}
+
+.past-status {
+    background-color: #dc3545; /* Crvena za PAST */
+}
+
 
 
   
