--- a/museum-frontend/src/app/feature-modules/exhibitions/exhibitions-view/exhibitions-view.component.css
+++ b/museum-frontend/src/app/feature-modules/exhibitions/exhibitions-view/exhibitions-view.component.css
@@ -98,6 +98,50 @@
   border-bottom: 3px solid #ff538a; /* Underline color for active or hovered filter */
   color: #ff538a; /* Text color for active or hovered filter */
 }
+
+.search-exhibitions-header {
+  background-color: #ffffff;
+  padding: 15px;
+  border-bottom: 1px solid #e0e0e0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.search-header-title h2 {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #333333;
+  margin: 0;
+}
+
+.search-buttons {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.search-category-btn, .search-btn, .remove-filters-btn {
+  padding: 10px 20px;
+  background-color: #ff538a;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+.search-category-btn:hover, .search-btn:hover, .remove-filters-btn:hover {
+  background-color: #ff3366;
+}
+
+.dropdown-menu {
+  background-color: #f5f5f5;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
   
 
   
