--- a/museum-frontend/src/app/feature-modules/exhibitions/exhibition-search/exhibition-search.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/exhibition-search/exhibition-search.component.html
@@ -1,55 +1,52 @@
 <div class="search-container">
-    <h3>Search by Exhibition Info</h3>
-  
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" id="name" [(ngModel)]="searchCriteria.name" (input)="onSearchChange()">
+  <h3>Search by Exhibition Info</h3>
+
+  <form>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" id="name" [(ngModel)]="searchCriteria.name" name="name" (input)="onSearchChange()">
+      </div>
+
+      <div class="form-group">
+        <label for="startDate">Date range</label>
+        <div class="date-range">
+          <input type="date" id="startDate" [(ngModel)]="searchCriteria.startDate" name="startDate" (change)="onSearchChange()">
+          <input type="date" id="endDate" [(ngModel)]="searchCriteria.endDate" name="endDate" (change)="onSearchChange()">
+        </div>
+      </div>
+      
+
+      <div class="form-group">
+        <label for="curator">Curator</label>
+        <input type="text" id="curator" [(ngModel)]="searchCriteria.curator" name="curator" (input)="onSearchChange()">
+      </div>
     </div>
-  
-    <div class="form-group">
-      <label for="shortDescription">Short Description</label>
-      <input type="text" id="shortDescription" [(ngModel)]="searchCriteria.shortDescription" (input)="onSearchChange()">
+
+    <div class="form-row">
+
+      <div class="form-group">
+        <label for="theme">Theme</label>
+        <select id="theme" [(ngModel)]="searchCriteria.theme" name="theme" (change)="onSearchChange()">
+          <option *ngFor="let theme of themes" [value]="theme">{{ theme }}</option>
+        </select>
+      </div>
+      
+
+    
+      <div class="form-group">
+        <label for="description">Description</label>
+        <input type="text" id="description" [(ngModel)]="searchCriteria.shortDescription" name="description" (input)="onSearchChange()">
+      </div>
+
+      <div class="form-group">
+        <label for="organizer">Organizer</label>
+        <input type="text" id="organizer" [(ngModel)]="searchCriteria.organizer" name="organizer" (input)="onSearchChange()">
+      </div>
+
+      
     </div>
-  
-    <div class="form-group">
-      <label for="longDescription">Long Description</label>
-      <input type="text" id="longDescription" [(ngModel)]="searchCriteria.longDescription" (input)="onSearchChange()">
-    </div>
-  
-    <div class="form-group">
-      <label for="theme">Theme</label>
-      <select id="theme" [(ngModel)]="searchCriteria.theme" (change)="onSearchChange()">
-        <option *ngFor="let theme of themes" [value]="theme">{{theme}}</option>
-      </select>
-    </div>
-  
-    <div class="form-group">
-      <label for="status">Status</label>
-      <select id="status" [(ngModel)]="searchCriteria.status" (change)="onSearchChange()">
-        <option *ngFor="let status of statuses" [value]="status">{{status}}</option>
-      </select>
-    </div>
-  
-    <div class="form-group">
-      <label for="startDate">Start Date (after)</label>
-      <input type="date" id="startDate" [(ngModel)]="searchCriteria.startDate" (change)="onSearchChange()">
-    </div>
-  
-    <div class="form-group">
-      <label for="endDate">End Date (before)</label>
-      <input type="date" id="endDate" [(ngModel)]="searchCriteria.endDate" (change)="onSearchChange()">
-    </div>
-  
-    <div class="form-group">
-      <label for="organizer">Organizer Name</label>
-      <input type="text" id="organizer" [(ngModel)]="searchCriteria.organizer" (input)="onSearchChange()">
-    </div>
-  
-    <div class="form-group">
-      <label for="curator">Curator Name</label>
-      <input type="text" id="curator" [(ngModel)]="searchCriteria.curator" (input)="onSearchChange()">
-    </div>
-  
-    <button (click)="onClearFilters()">Clear Filters</button>
-  </div>
-  
+
+    <button type="button" class="clear-filters-btn" (click)="onClearFilters()">Clear Filters</button>
+  </form>
+</div>
