--- a/museum-frontend/src/app/feature-modules/exhibitions/exhibitions-view/exhibitions-view.component.css
+++ b/museum-frontend/src/app/feature-modules/exhibitions/exhibitions-view/exhibitions-view.component.css
@@ -100,19 +100,29 @@
 }
 
 .search-exhibitions-header {
-  background-color: #ffffff;
-  padding: 15px;
+  position: relative;
+  background-color: #e9e4df;
+  padding: 10px;
   border-bottom: 1px solid #e0e0e0;
   display: flex;
-  flex-direction: column;
-  gap: 10px;
+  align-items: center;
+  gap: 15px;
+  z-index: 5; /* Ensure the header stays below the dropdown */
 }
 
-.search-header-title h2 {
-  font-size: 1.5em;
-  font-weight: bold;
+
+.search-header-title {
+  display: flex;
+  align-items: center;
+  font-size: 1.2em;
   color: #333333;
-  margin: 0;
+}
+
+.search-icon {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .search-buttons {
@@ -121,26 +131,67 @@
   gap: 10px;
 }
 
-.search-category-btn, .search-btn, .remove-filters-btn {
-  padding: 10px 20px;
-  background-color: #ff538a;
+.search-category-btn {
+  padding: 5px 15px;
+  background-color: #f0f0f0;
+  color: #333;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.search-category-btn.active {
+  background-color: #ffd9b3;
+  border-bottom: 3px solid #e69500;
+}
+
+.filter-count {
+  font-size: 0.85em;
+  background-color: #e69500;
+  color: white;
+  padding: 2px 6px;
+  border-radius: 50%;
+  margin-left: 5px;
+}
+
+.search-icon-btn, .clear-icon {
+  width: 26px;
+  height: 26px;
+}
+
+.search-btn, .remove-filters-btn {
+  padding: 5px 10px;
+  background-color: #e69500;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 1em;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
-.search-category-btn:hover, .search-btn:hover, .remove-filters-btn:hover {
-  background-color: #ff3366;
+
+.search-btn:hover, .remove-filters-btn:hover {
+  background-color: #cc8400;
 }
 
 .dropdown-menu {
-  background-color: #f5f5f5;
-  padding: 10px;
+  position: absolute;
+  top: 100%; /* Position it below the search buttons */
+  left: 0;
+  right: 0;
+  background-color: transparent;
+  padding: 0px;
   border-radius: 5px;
-  margin-top: 10px;
+  z-index: 10; /* Ensure the dropdown appears above other content */
 }
+
 
   
 
