--- a/museum-frontend/src/app/feature-modules/exhibitions/item-search/item-search.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/item-search/item-search.component.html
@@ -1,33 +1,40 @@
 <div class="search-container">
-    <h3>Search by Item Info</h3>
-  
-    <div class="form-group">
-      <label for="itemName">Item Name</label>
-      <input type="text" id="itemName" [(ngModel)]="searchCriteria.itemName" (input)="onSearchChange()">
+  <h3>Search by Item Info</h3>
+
+  <form>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="itemName">Name</label>
+        <input type="text" id="itemName" [(ngModel)]="searchCriteria.itemName" name="itemName" (input)="onSearchChange()">
+      </div>
+
+      <div class="form-group">
+        <label for="itemPeriod">Period</label>
+        <input type="text" id="itemPeriod" [(ngModel)]="searchCriteria.itemPeriod" name="itemPeriod" (input)="onSearchChange()">
+      </div>
+
+      <div class="form-group">
+        <label for="itemAuthorsName">Author's Name</label>
+        <input type="text" id="itemAuthorsName" [(ngModel)]="searchCriteria.itemAuthorsName" name="itemAuthorsName" (input)="onSearchChange()">
+      </div>
     </div>
-  
-    <div class="form-group">
-      <label for="itemDescription">Item Description</label>
-      <input type="text" id="itemDescription" [(ngModel)]="searchCriteria.itemDescription" (input)="onSearchChange()">
+
+    <div class="form-row">
+      <div class="form-group">
+        <label for="itemCategory">Category</label>
+        <select id="itemCategory" [(ngModel)]="searchCriteria.itemCategory" name="itemCategory" (change)="onSearchChange()">
+          <option *ngFor="let category of itemCategories" [value]="category">{{ category }}</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="itemDescription">Description</label>
+        <input type="text" id="itemDescription" [(ngModel)]="searchCriteria.itemDescription" name="itemDescription" (input)="onSearchChange()">
+      </div>
+
+      <div class="form-group"></div> <!-- Empty space -->
     </div>
-  
-    <div class="form-group">
-      <label for="itemAuthorsName">Author's Name</label>
-      <input type="text" id="itemAuthorsName" [(ngModel)]="searchCriteria.itemAuthorsName" (input)="onSearchChange()">
-    </div>
-  
-    <div class="form-group">
-      <label for="itemPeriod">Period</label>
-      <input type="text" id="itemPeriod" [(ngModel)]="searchCriteria.itemPeriod" (input)="onSearchChange()">
-    </div>
-  
-    <div class="form-group">
-      <label for="itemCategory">Category</label>
-      <select id="itemCategory" [(ngModel)]="searchCriteria.itemCategory" (change)="onSearchChange()">
-        <option *ngFor="let category of itemCategories" [value]="category">{{category}}</option>
-      </select>
-    </div>
-  
-    <button (click)="onClearFilters()">Clear Filters</button>
-  </div>
-  
+
+    <button type="button" class="clear-filters-btn" (click)="onClearFilters()">Clear Filters</button>
+  </form>
+</div>
