--- a/museum-frontend/src/app/feature-modules/exhibitions/review-search/review-search.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/review-search/review-search.component.html
@@ -1,24 +1,27 @@
 <div class="search-container">
-    <h3>Search by Reviews Info</h3>
-  
-    <div class="form-group">
-      <label for="minRating">Minimum Rating</label>
-      <select id="minRating" [(ngModel)]="minRating" (change)="onSearchChange()">
-        <option value="">Any</option>
-        <option *ngFor="let rating of [1, 2, 3, 4, 5]" [value]="rating">{{rating}} Stars</option>
-      </select>
+  <h3>Search by Reviews Info</h3>
+
+  <form>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="minRating">Minimum Rating</label>
+        <select id="minRating" [(ngModel)]="minRating" name="minRating" (change)="onSearchChange()">
+          <option value="">Any</option>
+          <option *ngFor="let rating of [1, 2, 3, 4, 5]" [value]="rating">{{ rating }} Stars</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="guest">Guest Name</label>
+        <input type="text" id="guest" [(ngModel)]="searchCriteria.guest" name="guest" (input)="onSearchChange()">
+      </div>
+
+      <div class="form-group">
+        <label for="comment">Comment</label>
+        <input type="text" id="comment" [(ngModel)]="searchCriteria.comment" name="comment" (input)="onSearchChange()">
+      </div>
     </div>
-  
-    <div class="form-group">
-      <label for="comment">Comment Text</label>
-      <input type="text" id="comment" [(ngModel)]="searchCriteria.comment" (input)="onSearchChange()">
-    </div>
-  
-    <div class="form-group">
-      <label for="guest">Guest Name</label>
-      <input type="text" id="guest" [(ngModel)]="searchCriteria.guest" (input)="onSearchChange()">
-    </div>
-  
-    <button (click)="onClearFilters()">Clear Filters</button>
-  </div>
-  
+
+    <button type="button" class="clear-filters-btn" (click)="onClearFilters()">Clear Filters</button>
+  </form>
+</div>
