--- a/museum-frontend/src/app/feature-modules/exhibitions/exhibition-search/exhibition-search.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/exhibition-search/exhibition-search.component.html
@@ -16,6 +16,7 @@
         </div>
       </div>
       
+      
 
       <div class="form-group">
         <label for="curator">Curator</label>
@@ -36,7 +37,7 @@
     
       <div class="form-group">
         <label for="description">Description</label>
-        <input type="text" id="description" [(ngModel)]="searchCriteria.shortDescription" name="description" (input)="onSearchChange()">
+        <input type="text" id="description" [(ngModel)]="searchCriteria.description" name="description" (input)="onSearchChange()">
       </div>
 
       <div class="form-group">
