--- a/museum-frontend/src/app/feature-modules/exhibitions/exhibitions-view/exhibitions-view.component.css
+++ b/museum-frontend/src/app/feature-modules/exhibitions/exhibitions-view/exhibitions-view.component.css
@@ -41,7 +41,7 @@
   }
 
   .card-container {
-    background-color: #f5f5f5;
+    background-color: white;
     padding: 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Uvek 3 kolone */
@@ -106,7 +106,8 @@
   border-bottom: 1px solid #e0e0e0;
   display: flex;
   align-items: center;
-  gap: 15px;
+  justify-content: space-between;
+  /* gap: 15px; */
   z-index: 5; /* Ensure the header stays below the dropdown */
 }
 
@@ -126,28 +127,51 @@
 }
 
 .search-buttons {
+  margin-left: 10px;
   display: flex;
-  justify-content: flex-start;
-  gap: 10px;
+  align-items: center;
+  flex-grow: 1; /* Allows the buttons to take up space */
 }
 
 .search-category-btn {
   padding: 5px 15px;
-  background-color: #f0f0f0;
+  background-color: transparent;
   color: #333;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
   font-size: 1em;
   display: flex;
   align-items: center;
   gap: 5px;
+  transition: color 0.3s ease;
+  position: relative;
+}
+
+.search-category-btn::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -3px; /* Adjust to position the line just below the text */
+  width: 100%;
+  height: 3px;
+  background-color: #e69500; /* Gold color */
+  opacity: 0;
+  transition: opacity 0.3s ease; /* Smoothly transition the line's visibility */
+}
+
+.search-category-btn.active::after,
+.search-category-btn:hover::after {
+  opacity: 1; /* Make the line visible */
+}
+
+.search-category-btn:hover {
+  color: #e69500;
 }
 
 .search-category-btn.active {
-  background-color: #ffd9b3;
-  border-bottom: 3px solid #e69500;
+  color: #e69500;
 }
+
 
 .filter-count {
   font-size: 0.85em;
@@ -158,10 +182,24 @@
   margin-left: 5px;
 }
 
-.search-icon-btn, .clear-icon {
+.search-icon-btn {
   width: 26px;
   height: 26px;
+  margin-left: 10px;
 }
+
+.clear-icon {
+  width: 26px;  /* Adjust the size as needed */
+  height: 26px;
+  cursor: pointer;
+  transition: transform 0.2s ease, filter 0.2s ease;
+}
+
+.clear-icon:hover {  
+  filter: brightness(95%);  /* Darken the icon slightly on hover */
+}
+
+
 
 .search-btn, .remove-filters-btn {
   padding: 5px 10px;
@@ -174,6 +212,12 @@
   display: flex;
   align-items: center;
   gap: 5px;
+}
+
+.search-btn{
+  margin-left: auto; /* Pushes the button to the far right */
+  margin-right: 10px;
+  width: 110px;
 }
 
 
