--- a/museum-frontend/src/app/feature-modules/exhibitions/review-search/review-search.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/review-search/review-search.component.html
@@ -5,12 +5,9 @@
     <div class="form-row">
       <div class="form-group">
         <label for="minRating">Minimum Rating</label>
-        <select id="minRating" [(ngModel)]="minRating" name="minRating" (change)="onSearchChange()">
-          <option value="">Any</option>
-          <option *ngFor="let rating of [1, 2, 3, 4, 5]" [value]="rating">{{ rating }} Stars</option>
-        </select>
+        <input type="number" id="minRating" [(ngModel)]="minRating" name="minRating" 
+               (input)="onSearchChange()" min="0" max="5" placeholder="Any">
       </div>
-
       <div class="form-group">
         <label for="guest">Guest Name</label>
         <input type="text" id="guest" [(ngModel)]="searchCriteria.guest" name="guest" (input)="onSearchChange()">
