dodate slike za data.sql skriptu (ITEMI)

--- a/museum-frontend/src/app/feature-modules/exhibitions/exhibitions-view/exhibitions-view.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/exhibitions-view/exhibitions-view.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="search-exhibitions-header">
         <div class="search-header-title">
-            <img src="assets/search2.png" alt="Search" class="search-icon"/>
+            <img src="assets/icons/search2.png" alt="Search" class="search-icon"/>
             <span>Search by:</span>
         </div>
         <div class="search-buttons">
@@ -25,10 +25,10 @@
                 Reviews Info 
                 <span class="filter-count">{{ reviewsInfoFiltersCount }}</span>
             </button>
-            <img src="assets/clear-filter1.png" alt="Clear Filters" class="clear-icon" (click)="resetFilters()"/>
+            <img src="assets/icons/clear-filter1.png" alt="Clear Filters" class="clear-icon" (click)="resetFilters()"/>
             <button class="search-btn" (click)="searchExhibitions()">
                 Search
-                <img src="assets/search3.png" alt="Search" class="search-icon-btn"/>
+                <img src="assets/icons/search3.png" alt="Search" class="search-icon-btn"/>
             </button>
             
         </div>
