--- a/museum-frontend/src/app/feature-modules/layout/home/home.component.css
+++ b/museum-frontend/src/app/feature-modules/layout/home/home.component.css
@@ -7,7 +7,7 @@
   font-family: "Poppins", sans-serif;
   display: flex;
   flex-direction: column;
-  background: url('https://images.unsplash.com/photo-1594680353064-9de5c18ecbaa?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat;
+  background: url('https://img.freepik.com/free-photo/abstract-smooth-brown-wall-background-layout-design-studio-room-web-template-business-report-with-smooth-circle-gradient-color_1258-53138.jpg?t=st=1725323206~exp=1725326806~hmac=60acd665423bd7304d78313a6f8ae13872a438d8561d29c44f8ac7d23333549f&w=2000') no-repeat;
   background-position: center;
   background-size: cover;
   transition: background-size 0.3s ease;
