--- a/museum-frontend/src/app/feature-modules/layout/home/home.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="banner" [ngStyle]="{'background-size': backgroundSize}">
   <div class="museum-info-container">
     <div class="overlay">
-      <img src="assets/color-logo1.png" alt="Artium Historia Museum Logo" class="museum-logo">
+      <img src="assets/logo/color-logo1.png" alt="Artium Historia Museum Logo" class="museum-logo">
       <div class="museum-description">
         <h1>Artium Historia Museum</h1>
         <p>Discover the legacy of art and history at the Artium Historia Museum. Our exhibits transport you across time and cultures, offering a unique perspective on the human experience through the lens of art and historical artifacts.
