--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div id="navbar-container">
     <div id="left-buttons">
       <div id="logo">
-            <img src="assets/black-white-logo.png" alt="Artium Historia Museum Logo">
+            <img src="assets/logo/black-white-logo.png" alt="Artium Historia Museum Logo">
       </div>
       <button
               class="feat-button"
