--- a/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.html
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.html
@@ -7,7 +7,7 @@
             <p class="username">&#64;{{curator?.username}}</p>
             <p class="bio">{{curator?.biography}}</p>
             </div>
-            <img class="edit-icon" src="assets/edit.png" />
+            <img class="edit-icon" src="assets/icons/edit.png" />
         </div>
         <div class="action-buttons">
             <button class="generate-report">Generate Report</button>
