--- a/museum-frontend/src/app/feature-modules/stakeholder/components/guest-profile/guest-profile.component.html
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/guest-profile/guest-profile.component.html
@@ -7,7 +7,7 @@
                 <p class="username">&#64;{{guest?.username}}</p>
                 <p class="bio">{{guest?.biography}}</p>
             </div>
-            <img class="edit-icon" src="assets/edit.png" />
+            <img class="edit-icon" src="assets/icons/edit.png" />
         </div>
     </div>
   
