--- a/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.html
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.html
@@ -7,7 +7,7 @@
                 <p class="username">&#64;{{organizer?.username}}</p>
                 <p class="bio">{{organizer?.biography}}</p>
             </div>
-            <img class="edit-icon" src="assets/edit.png"/>
+            <img class="edit-icon" src="assets/icons/edit.png"/>
         </div>
         <div class="action-buttons">
             <button class="generate-report">Generate Report</button>
